--- a/TiendaRopa/src/com/view/ReporteFacturas.form
+++ b/TiendaRopa/src/com/view/ReporteFacturas.form
@@ -131,6 +131,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField1">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextField1KeyPressed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
